exports[`Hover Event_Style_View joined transitions`] = `
<div
  data-css-15v757s="*"
  onMouseEnter={[Function bound handleMouseEnter]}
  onMouseLeave={[Function bound handleMouseLeave]}
  style={undefined}>
  <span>
    Hover me
  </span>
</div>
`;

exports[`Hoverable Style_View`] = `
<div
  data-css-19wtuek="*"
  onMouseEnter={[Function bound handleMouseEnter]}
  onMouseLeave={[Function bound handleMouseLeave]}
  style={undefined}>
  <div
    data-css-1eur0r2="*"
    style={undefined}>
    <span>
      Hover me
    </span>
  </div>
</div>
`;

exports[`Rotate onClick Event_View`] = `
<button
  data-css-1gc1gmd="*"
  onClick={[Function anonymous]}
  style={undefined}>
  <span>
    Click me
  </span>
</button>
`;
